# crustcrawler_controller

./: CMakeLists.txt  README.md
include/: arm_controller.hpp  kinematics.hpp  real.hpp  robotArm.hpp  robot_params.hpp
src/: arm_controller.cpp  end_effector_pose.cpp  kinematics.cpp  real.cpp  robotArm.cpp  test_real_crustcrawler_arm.cpp
test_tools/: ik_simu_test.cpp
test_tools/simulation/: arm_crustcrawler.cpp  arm_crustcrawler.hpp  environment_arm.cpp  environment_arm.hpp  parameters_simulation.hpp  simu.cpp  simu.hpp
